--- a/jtwhatsapp/chat/index.html
+++ b/jtwhatsapp/chat/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plain JS Chat</title>
+    <title>Demo WhatsApp</title>
     <style>
         body { font-family: sans-serif; margin: 20px; }
-        #chat-container { border: 1px solid #ccc; padding: 10px; height: 300px; overflow-y: scroll; margin-bottom: 10px; }
+        #chat-container { border: 1px solid #02010d; padding: 10px; height: 300px; overflow-y: scroll; margin-bottom: 10px; }
         #message-input { width: calc(100% - 70px); padding: 8px; }
         #send-button { width: 60px; padding: 8px; cursor: pointer; }
         .message { margin-bottom: 5px; }
-        .self-message { text-align: right; color: blue; }
+        .self-message { text-align: right; color: rgb(179, 26, 15); }
         .other-message { text-align: left; color: green; }
     </style>
 </head>
 <body>
-    <h1>Plain JS Chat</h1>
+    <h1>Demo Whats App</h1>
     <div id="chat-container"></div>
     <input type="text" id="username-input" placeholder="Enter your username" value="User1">
     <input type="text" id="message-input" placeholder="Type your message...">
